# transcendence

./: Game Protocol.md  README.md  docker-compose.yaml
nginx/: Dockerfile  nginx.conf
pong-serv/: Cargo.toml  Dockerfile
pong-serv/src/: accept_tasks.rs  game.rs  main.rs  match_making.rs  protocol.rs
pong-serv/src/game/: combined_send.rs  engine.rs  side.rs  state.rs
pong-serv/src/game/state/: done.rs  running.rs  startup.rs
pong-serv/src/match_making/: opponents_joining.rs
pong-serv/src/protocol/: constants.rs  messages.rs  side.rs
pong-serv/src/protocol/messages/: game_running.rs  game_start.rs  hello.rs
postgres/: Dockerfile  initialize_database.sh
tls/: setup.sh
transcendence/: .pg_service.conf  Dockerfile  requirements.txt  run_django.sh
transcendence/account/: admin.py  models.py  urls.py  views.py
transcendence/navigation/: urls.py  views.py
transcendence/static/: HtmlPageGetter.js  base.js  cookie_getter.js  decode_cbor.js  encode_cbor.js  friends.html  home_page.html  lib.js  router.js
transcendence/static/account/: account.js  credentials.html  credentials.js  friends_communication.js  logged.html  statistics.html  statistics.js  update_credentials.html
transcendence/static/css/: styles.css
transcendence/static/game/: bot.js  communication.js  game_engine.js  game_loop.js  rendering.js  wall.js
transcendence/templates/: base.html
transcendence/transcendence/: asgi.py  settings.py  urls.py
transcendence/websockets/: consumers.py  routing.py
