[package]
name = "pong-serv"
authors = ["Quartz is Nuggets"]
edition = "2021"
description = "Pong server, implementing a communication protocol. Receives websocket connections from clients to run games."
readme = "../README.md"
repository = "https://github.com/QuartzIsNuggets/transcendence"
publish = false

[dependencies]
ciborium = "0.2.2"
ciborium-io = "0.2.2"
clap = { version = "4.5.1", features = ["derive"] }
fern = "0.6.2"
file-rotate = "0.7.5"
futures-util = "0.3.30"
log = "0.4.20"
nix = { version = "0.28.0", features = ["net", "socket"] }
rand = "0.8.5"
rustls = "0.23.4"
thiserror = "1.0.56"
time = { version = "0.3.34", features = ["formatting"] }
tokio = { version = "1.35.1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-postgres = "0.7.10"
tokio-rustls = "0.26.0"
tokio-tungstenite = { version = "0.21.0", features = ["rustls"] }
